<resources>
    <string name="app_name">Wall.e</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">    Wall.e</string>
    <string name="nav_header_subtitle">A destination for best wallpapers</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="action_search">Search</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="collections">Collections:</string>
    <string name="from">from</string>
    <string name="pexels">Pexels.com</string>
    <string name="photo_by">Photo by</string>
    <string name="detail_share">Share</string>
    <string name="detail_download">Download</string>
    <string name="detail_save">Save</string>
    <string name="detail_recommendation">Recommendation:</string>
    <string name="image_size_original">Original</string>
    <string name="image_size_large2x">Large2x</string>
    <string name="image_size_large">Large</string>
    <string name="image_size_medium">Medium</string>
    <string name="image_size_small">Small</string>
    <string name="image_size_portrait">Portrait</string>
    <string name="image_size_landscape">Landscape</string>
    <string name="image_size_tiny">Tiny</string>
    <string name="about_app_desc">, is a wallpaper application, powered by \"pexels.com\" API, made for android devices to make the task of finding beautiful wallpapers very easy.\n This app provides endless photos through the Pexels API, shared by talented creators across the globe.</string>
    <string name="allow_permission_bottomsheet_msg">To use all the features of this app such as downloading and saving wallpapers to the phone storage, accessing the downloaded wallpapers etc you need to give the following permissions to the app.</string>
    <string name="permissions">Permissions:\n\n1. READ EXTERNAL STORAGE\n2. WRITE EXTERNAL STORAGE</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="photographer_name_temp">Anonymous</string>
    <string name="featured_temp_str">Featured</string>
    <string name="nav_menu_about">About</string>
    <string name="nav_header_communicate">Communicate</string>
    <string name="nav_menu_saved">Saved</string>
    <string name="detail_set_wallpaper">Set Wallpaper</string>
    <string name="recent_searches">Recent searches:</string>
    <string name="temp_3d_wallpapers">3d wallpapers</string>
    <string name="text_unsave">Unsave</string>
    <string name="copy_right">Copyrights © %1$d</string>
    <string name="nav_menu_downloads">Downloads</string>
    <string name="nav_menu_rate_app">Rate app</string>
    <string name="bottomSheet_choose_option">Choose option:</string>
    <string name="bottomSheet_delete_image">Delete image</string>
    <string name="bottomSheet_send_image">Send image</string>
    <string name="bottomSheet_set_as_wallpaper">Set as wallpaper</string>
    <string name="no_suggestions_found">No suggestions found.</string>
    <string name="bottomSheet_button_go">go</string>

</resources>
