<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="8dp"
    app:cardElevation="5dp"
    app:cardCornerRadius="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="5dp"
            android:padding="5dp"
            android:layout_marginStart="5dp"
            android:gravity="center_vertical">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:id="@+id/roundedPexels"
                android:src="@drawable/pexels"
                android:background="@drawable/item_click"
                android:layout_marginRight="3dp"
                android:layout_marginEnd="2dp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textAttr1"
                android:text="@string/photo_by"
                android:textSize="12sp"
                android:layout_marginLeft="3dp"
                android:layout_marginStart="3dp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textAttrPhotographer"
                android:layout_marginLeft="5dp"
                android:textStyle="bold"
                android:textColor="@color/purple"
                android:background="@drawable/item_click"
                android:text="@string/photographer_name_temp"
                android:textSize="13sp"
                android:layout_marginStart="5dp" />
            </LinearLayout>
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="4"
            android:layout_margin="10dp"
            android:baselineAligned="false">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/linear_detail_save"
                android:background="@drawable/item_click"
                android:orientation="vertical"
                android:layout_weight="1"
                android:gravity="center">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/iv_detail_save"
                    android:src="@drawable/ic_save_unchecked"
                    android:padding="5dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv_detail_save"
                    android:text="@string/detail_save"
                    android:textSize="15sp"/>
            </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/linear_detail_setWall"
            android:background="@drawable/item_click"
            android:orientation="vertical"
            android:layout_weight="1"
            android:gravity="center">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/iv_detail_setWall"
                android:src="@drawable/ic_set_wallpaper"
                android:padding="5dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_detail_setWall"
                android:text="@string/detail_set_wallpaper"
                android:textSize="15sp"/>
        </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/linear_detail_download"
                android:orientation="vertical"
                android:background="@drawable/item_click"
                android:layout_weight="1"
                android:gravity="center">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/iv_detail_download"
                    android:src="@drawable/ic_download"
                    android:padding="5dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv_detail_download"
                    android:gravity="center"
                    android:text="@string/detail_download"
                    android:textSize="15sp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/linear_detail_share"
                android:orientation="vertical"
                android:background="@drawable/item_click"
                android:layout_weight="1"
                android:gravity="center">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/iv_detail_share"
                    android:src="@drawable/ic_share"
                    android:padding="5dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv_detail_share"
                    android:text="@string/detail_share"
                    android:textSize="15sp"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>